--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   color: #16192c;
   display: flex;
@@ -181,7 +181,7 @@ header.topo {
   height: 38px;
   margin-top: 6px;
 }
-.busca-input {
+.box-busca-input {
   float: right;
   width: 360px;
   height: 40px;
@@ -190,6 +190,15 @@ header.topo {
   font-size: 12px;
   font-weight: 500;
   margin: 7px 20px;
+}
+.box-busca-input input {
+  border: 0;
+  font-size: 12px;
+  padding: 10px;
+}
+.box-busca-input span {
+  float: right;
+  margin: -30px 10px 0 0;
 }
 
 main.centro {
@@ -287,19 +296,23 @@ aside.menu-conteudo ul li ul li {
     width: 100%;
     padding: 0 4%;
   }
-  .busca-input {
+  .box-busca-input {
     width: 280px;
   }
 }
 @media screen and (max-width: 670px) {
-  .busca-input {
+  .box-busca-input {
     width: 100%;
     margin: 0;
     margin-top: -3px;
-    padding: 20px 30px;
+    padding: 20px 20px;
     border-radius: 0;
     box-shadow: 2px 0px 2px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid #eee;
+  }
+  .box-busca-input input {
+    width: 100%;
+    margin-top: -18px;
   }
   section.box-conteudo {
     margin-top: 30px;
