--- a/styles.css
+++ b/styles.css
@@ -97,17 +97,24 @@ hr {
   display: flex;
   flex-direction: column;
 }
+.box-logo-wiki {
+    width: 100%;
+    height: 65px;
+    border-bottom: 1px solid #d6d6d6;
+    display: flex;
+    align-items: center;
+}
 .logo-wiki {
   width: 120px;
   height: 24px;
   margin: 0 auto;
-  margin-top: 20px;
 }
 nav.menu {
-  position: relative;
-  width: 100%;
-  top: 25px;
-  overflow-y: scroll;
+    position: relative;
+    width: 100%;
+    top: 0;
+    padding-top: 20px;
+    overflow-y: scroll;
 }
 nav.menu ul {
   margin-left: -15px;
